Reflecting review comments.